<resources>
    <string name="app_name">CodeLab</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email_address">email address</string>
    <string name="username_register">username_register</string>
    <string name="sign_up">Sign up</string>
    <string name="username">username</string>
    <string name="logout">Logout</string>
    <string name="search">search</string>
    <string name="status">Status</string>
    <string name="friends">Friends</string>
    <string name="chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
